After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763749 - Nautilus desktop window is too small with gtk 3.19
Nautilus desktop window is too small with gtk 3.19
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-03-16 12:24 UTC by Olivier Fourdan
Modified: 2016-03-18 12:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] desktop: Fix desktop window being too small (1.54 KB, patch)
2016-03-16 12:31 UTC, Olivier Fourdan
none Details | Review
[PATCH] gtkwindow: ignore default size if there is a size request (1.47 KB, patch)
2016-03-16 13:43 UTC, Olivier Fourdan
accepted-commit_now Details | Review

Description Olivier Fourdan 2016-03-16 12:24:59 UTC
Description:

The Nautilus desktop window is an unresizable, undecorated window which should be the size of the screen.

The changes in gtk+ to address bug 762974 changed the semantic of fixed size windows and default size (previously, the default size would have been completely ignored with fixed-size windows)

See:

  https://git.gnome.org/browse/gtk+/commit/?id=cdc5804
  https://git.gnome.org/browse/gtk+/commit/?id=adcd1ce

The problem is that Nautilus does set a size-request to match the size of the screen but also set a much smaller default size which ends up being the szize applied, causing the desktop window to be much smaller than the expected size.
Comment 1 Olivier Fourdan 2016-03-16 12:31:03 UTC
Created attachment 324093 [details] [review]
[PATCH] desktop: Fix desktop window being too small

Proposed patch
Comment 2 Olivier Fourdan 2016-03-16 13:41:12 UTC
Review of attachment 324093 [details] [review]:

We should fix it in gtk+ instead
Comment 3 Olivier Fourdan 2016-03-16 13:42:20 UTC
Moving to gtk+
Comment 4 Olivier Fourdan 2016-03-16 13:43:37 UTC
Created attachment 324100 [details] [review]
[PATCH] gtkwindow: ignore default size if there is a size request

Some applications set both a default size on their gtk window and a size
request on the corresponding gtk widget.

Until now, the default size was ignored for fixed size windows, so this
had no effect and remained unnoticed, but with the recent change for
client-side decorations, the default size is now used even for fixed size
windows, which can cause the resulting fixed size window to be much
smaller than expected with the size request.

For fixed size windows, if we have both a size request and a default
size set, prefer the size request as before.
Comment 5 Matthias Clasen 2016-03-16 13:44:42 UTC
Review of attachment 324100 [details] [review]:

yes, looks like the right thing to do